fixed spacing issues in li in #about

--- a/css/style.css
+++ b/css/style.css
@@ -135,10 +135,11 @@ address a {
 
 #about li {
     margin-bottom: 1.5em;
-    text-transform: uppercase;
     background: lightgrey;
     border: 2px solid #fff;
     border-radius: .4em;
+    font-family: 'Euphoria Script', cursive;
+    font-size: 1.5em;
 }
 
 #about img {
@@ -183,20 +184,15 @@ footer a {
 }
 
 /******Media Queries******/
+
 @media screen and (min-width: 540px) {
     #about li {
         width: 47%;
         display: inline-block;
     }
-    
 }
-
-@media screen and (min-width: 768px) {
-    #about li {
-        width: 30%;
-        display: inline-block;
-    }
-
+  
+@media screen and (max-width: 768px) {
     #footer-nav {
         display: none;
     }
@@ -285,7 +281,16 @@ footer a {
         padding-left: 1em;
         padding-right: 1em;
     }
+    /*****About styles for Tablets****/
+    #about li {
+        width: 30%;
+        display: inline-block;
+    }
     
+    #about ul{
+        margin-left: -10%;
+        margin-right: -10%;
+    }
     /*****Footer styles for Tablets****/
     footer {
         padding-bottom: 7em;
